--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -82,6 +82,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create-release.outputs.upload_url }}
-          asset_path: ./build
+          asset_path: ./dist
           asset_name: nc-web-ui-${{ steps.version.outputs.version }}.zip
           asset_content_type: application/zip 
