--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,9 +39,8 @@ jobs:
         id: version
         run: |
           npm run version:tag
-          VERSION=${GITHUB_REF#refs/tags/v}
+          VERSION=$(npm run version:current --silent)
           echo "version=$VERSION" >> $GITHUB_OUTPUT
-          echo "tag=$GITHUB_REF" >> $GITHUB_OUTPUT
 
       - name: Generate release notes
         id: release-notes
@@ -75,7 +74,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ steps.version.outputs.tag }}
+          tag_name: ${{ steps.version.outputs.version }}
           release_name: Release ${{ steps.version.outputs.version }}
           body: ${{ steps.release-notes.outputs.notes }}
           draft: false
