Fix release workflow to prepend 'v' to version output and remove tag creation from version script

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,7 +40,7 @@ jobs:
         run: |
           npm run version:tag
           VERSION=$(npm run version:current --silent)
-          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "version=v$VERSION" >> $GITHUB_OUTPUT
 
       - name: Generate release notes
         id: release-notes
