Reset to version 1.0.0

--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -79,6 +79,7 @@ jobs:
             
             ### Changes
             - Updated `package.json` version
+            - Updated `CHANGELOG.md`
             
             ### Type: ${{ steps.bump-type.outputs.bump_type }}
             
