--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -70,6 +70,7 @@ jobs:
           echo "EOF" >> $GITHUB_OUTPUT
 
       - name: Create Release
+        id: create-release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
