--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "version:validate": "npx tsx scripts/version.ts validate",
     "version:info": "npx tsx scripts/version.ts info",
     "version:compare": "npx tsx scripts/version.ts compare",
+    "version:notes": "npx tsx scripts/version.ts notes",
     "version:patch": "npm run version:bump patch",
     "version:minor": "npm run version:bump minor",
     "version:major": "npm run version:bump major",
